<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/sign_in_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/launch"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/sign_in_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="55dp"
                android:layout_marginRight="55dp"
                android:layout_marginTop="120dp"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/logo" />

            <com.telemetry.outputsleepapp.font.SomeTextView
                android:id="@+id/sign_up_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/sign_up"
                android:textColor="#119ecc"
                android:textSize="25sp"
                android:onClick="onClick" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="bottom"
                android:layout_marginBottom="40dp">

                <com.telemetry.outputsleepapp.font.SomeEditText
                    android:id="@+id/sign_up_first_name"
                    android:layout_width="188dp"
                    android:layout_height="39dp"
                    android:layout_gravity="left"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/purple_btn_image"
                    android:hint="@string/first_name"
                    android:maxLines="1"
                    android:inputType="text"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textColorHint="#fff" />

                <com.telemetry.outputsleepapp.font.SomeEditText
                    android:id="@+id/sign_up_last_name"
                    android:layout_width="188dp"
                    android:layout_height="39dp"
                    android:layout_gravity="left"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/purple_btn_image"
                    android:hint="@string/last_name"
                    android:maxLines="1"
                    android:inputType="text"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textColorHint="#fff" />

                <com.telemetry.outputsleepapp.font.SomeEditText
                    android:id="@+id/sign_up_email"
                    android:layout_width="234dp"
                    android:layout_height="44dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="4dp"
                    android:background="@drawable/green_btn_image"
                    android:hint="@string/email"
                    android:maxLines="1"
                    android:inputType="textEmailAddress"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textColorHint="#fff" />

                <com.telemetry.outputsleepapp.font.SomeEditText
                    android:id="@+id/sign_up_password"
                    android:layout_width="234dp"
                    android:layout_height="44dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="4dp"
                    android:background="@drawable/green_btn_image"
                    android:hint="@string/password"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textColorHint="#fff" />

                <LinearLayout
                    android:id="@+id/sign_up_agree_to_terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/sign_up_checkbox"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/checkbox_off"
                        android:onClick="onClick" />

                    <com.telemetry.outputsleepapp.font.SomeTextView
                        android:id="@+id/sign_up_agree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:text="@string/agree"
                        android:textSize="14sp"
                        android:textColor="#354368" />

                    <com.telemetry.outputsleepapp.font.SomeTextView
                        android:id="@+id/sign_up_the_terms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:text="@string/the_terms"
                        android:layout_marginLeft="3sp"
                        android:textSize="14sp"
                        android:textColor="#354368"
                        android:onClick="onClick" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/sign_up_facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:onClick="onClick"
                    android:layout_marginTop="8dp">

                    <ImageView
                        android:id="@+id/sign_up_facebook_icon"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        app:srcCompat="@drawable/facebook_icon" />

                    <com.telemetry.outputsleepapp.font.SomeTextView
                        android:id="@+id/sign_in_with_facebook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"

                        android:text="@string/facebook"
                        android:textSize="14sp"
                        android:textColor="#3c599b" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>