<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/sign_in_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/launch"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="55dp"
            android:layout_marginRight="55dp">

            <ImageView
                android:id="@+id/sign_in_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                android:layout_marginTop="120dp"
                app:srcCompat="@drawable/logo" />

            <com.telemetry.outputsleepapp.font.SomeTextView
                android:id="@+id/sign_in_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="57dp"
                android:layout_marginBottom="57dp"
                android:text="@string/sign_in"
                android:textColor="#354368"
                android:textSize="25sp"
                android:onClick="onClick"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="bottom"
                android:layout_marginBottom="100dp">

                <com.telemetry.outputsleepapp.font.SomeEditText
                    android:id="@+id/sign_in_email"
                    android:layout_width="match_parent"
                    android:layout_height="39dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="4dp"
                    android:background="@drawable/blue_btn_image"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textColorHint="#fff" />

                <com.telemetry.outputsleepapp.font.SomeEditText
                    android:id="@+id/sign_in_password"
                    android:layout_width="match_parent"
                    android:layout_height="39dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:background="@drawable/green_btn_image"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textColorHint="#fff" />

                <com.telemetry.outputsleepapp.font.SomeTextView
                    android:id="@+id/sign_in_forgot_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:onClick="onClick"
                    android:text="@string/forgot_password"
                    android:textAlignment="center"
                    android:textColor="#354368"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>